<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shanika.expensetracker.History">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout

            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/gg"
            android:backgroundTintMode="screen"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:weightSum="1"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="0dp">

            <ImageButton
                android:id="@+id/back"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|left"
                android:background="@drawable/ic_keyboard_arrow_left_red_900_24dp"
                android:baselineAlignBottom="false"
                android:contextClickable="true"
                android:cropToPadding="false"
                android:elevation="0dp"
                android:onClick="onBackButtonClick"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_keyboard_arrow_left_red_900_24dp" />

            <TextView

                android:id="@+id/history"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top|center"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="History"
                android:textColor="#0c2cbb"
                android:textColorLink="@android:color/holo_orange_dark"
                android:textDirection="firstStrongRtl"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/historyType"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|right"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:adjustViewBounds="true"
                android:background="@drawable/ic_more_vert_red_900_24dp"
                android:cropToPadding="true"
                android:elevation="0dp"
                android:onClick="onHistoryMenuClicked"
                android:scaleType="centerCrop"
                android:visibility="visible" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical">

            <TextView

                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/primary_material_light_1"
                android:ems="10"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:text="All Categories"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="This may show your recent transactions upto last 100 records"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <ListView
            android:id="@+id/history_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:textAlignment="center"
            android:textDirection="firstStrong" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
