...
        android:weightSum="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout

            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/gg"
            android:backgroundTintMode="screen"
            android:weightSum="1"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="0dp">

            <ImageButton
                android:id="@+id/back"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|left"
                android:background="@drawable/ic_keyboard_arrow_left_red_900_24dp"
                android:baselineAlignBottom="false"
...
                android:scaleType="centerCrop"
                android:translationY="8dp"
                app:srcCompat="@drawable/ic_keyboard_arrow_left_red_900_24dp" />

            <TextView

                android:id="@+id/glance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top|center"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="Search"
                android:textColor="#0c2cbb"
                android:textColorLink="@android:color/holo_orange_dark"
                android:textDirection="firstStrongRtl"
                android:textSize="28sp"
                android:textStyle="bold"
                android:translationY="-5dp" />

            <ImageButton
                android:id="@+id/searchCatMenu"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|right"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="0dp"
...
                android:visibility="visible" />


        </LinearLayout>

        <ScrollView
            android:id="@+id/search_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/srch_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="334dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Search your transactions for any period and any category"
                    android:textColor="?attr/colorControlNormal"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
...
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="130dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="10dp"
                            android:gravity="top|center"
                            android:text="Start Date :"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/startDateView"
                            android:layout_width="160dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="YYYY-MM-DD"
                            android:textSize="20sp" />

                        <ImageButton
                            android:id="@+id/startDateBtn"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="40dp"
                            android:layout_weight="1"
                            android:background="@drawable/ic_date_range_red_900_24dp" />

...
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="130dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="0.07"
                            android:gravity="top|center"
                            android:text="End Date  :"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/endDateView"
                            android:layout_width="160dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="YYYY-MM-DD"
                            android:textSize="20sp" />

                        <ImageButton
                            android:id="@+id/endDateBtn"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="40dp"
                            android:layout_weight="1"
                            android:background="@drawable/ic_date_range_red_900_24dp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Search_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/searchBtn"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="130dp"
                        android:layout_marginRight="130dp"
                        android:layout_weight="0.04"
                        android:background="@android:color/holo_blue_dark"
                        android:elevation="1dp"
                        android:foregroundGravity="center"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="50"
                        android:text="SEARCH" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/summary_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
